// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar should render inset 1`] = `
<div>
  <div
    class="pf-c-toolbar pf-m-inset-none pf-m-inset-sm-on-md pf-m-inset-2xl-on-xl pf-m-inset-lg-on-2xl"
    data-ouia-component-id="OUIA-Generated-Toolbar-1"
    data-ouia-component-type="PF4/Toolbar"
    data-ouia-safe="true"
    id="toolbar"
  >
    <div
      class="pf-c-toolbar__content"
    >
      <div
        class="pf-c-toolbar__content-section"
      >
        <div
          class="pf-c-toolbar__item"
        >
          Test
        </div>
        <div
          class="pf-c-toolbar__item"
        >
          Test 2
        </div>
        <hr
          class="pf-c-divider pf-m-vertical"
        />
        <div
          class="pf-c-toolbar__item"
        >
          Test 3 
        </div>
      </div>
      <div
        class="pf-c-toolbar__expandable-content"
        id="toolbar-expandable-content-0"
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`Toolbar should render with page inset flag 1`] = `
<div>
  <div
    class="pf-c-toolbar pf-m-page-insets"
    data-ouia-component-id="OUIA-Generated-Toolbar-2"
    data-ouia-component-type="PF4/Toolbar"
    data-ouia-safe="true"
    id="toolbar"
  >
    <div
      class="pf-c-toolbar__content"
    >
      <div
        class="pf-c-toolbar__content-section"
      >
        <div
          class="pf-c-toolbar__item"
        >
          Test
        </div>
        <div
          class="pf-c-toolbar__item"
        >
          Test 2
        </div>
        <hr
          class="pf-c-divider pf-m-vertical"
        />
        <div
          class="pf-c-toolbar__item"
        >
          Test 3 
        </div>
      </div>
      <div
        class="pf-c-toolbar__expandable-content"
        id="toolbar-expandable-content-1"
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`ToolbarItem should map width breakpoints 1`] = `
<div>
  <div
    class="pf-c-toolbar__item"
    style="--pf-c-toolbar__item--Width: 100px; --pf-c-toolbar__item--Width-on-sm: 80px; --pf-c-toolbar__item--Width-on-md: 150px; --pf-c-toolbar__item--Width-on-lg: 200px; --pf-c-toolbar__item--Width-on-xl: 250px; --pf-c-toolbar__item--Width-on-2xl: 300px;"
  >
    Test
  </div>
</div>
`;
